--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/profile.jpeg" alt="Max Witte" width="80">
+          <img src="./assets/images/Profile pic.jpg" alt="Max Witte" width="80">
         </figure>
 
         <div class="info-content">
