--- a/index.html
+++ b/index.html
@@ -428,6 +428,12 @@
               </a>
             </li>
 
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/logo-Conscia.svg" alt="client logo">
+              </a>
+            </li>
+
           </ul>
 
         </section>
