--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
 
               <h4 class="h4 timeline-item-title">Mobiliteitsdiensten Nederland B.V - Part-time</h4>
 
-              <span>Oct 2022 — Current</span>
+              <span>Oct 2022 — Feb 2025</span>
 
               <p class="timeline-text">
                During my time at Mobiliteitsdiensten Nederland B.V., I worked as a private chauffeur, providing safe and reliable transportation for clients. 
@@ -675,9 +675,22 @@
 				I also contributed to the creation of the new curriculum for a first-year subject, collaborating with faculty to ensure the content met academic standards. 
 				I provided administrative support, guided visitors, and helped create a welcoming environment for both current and potential students. 
 				This role allowed me to develop strong communication and organizational skills while gaining experience in educational settings and contributing to the university’s outreach efforts.
+
               </p>
 
             </li>
+		  		<li class="timeline-item">
+
+		<h4 class="h4 timeline-item-title">Student aan huis - Part-time</h4>
+
+		<span>Feb 2025 - Current</span>
+
+		<p class="timeline-text">
+			In my part-time role at Student aan Huis, I provided personalized tech support to clients in their homes, assisting with tasks like troubleshooting software, setting up devices, and resolving connectivity issues.
+			I explained complex technical concepts in an accessible way, ensuring clients felt confident using their technology.
+			I also managed appointment scheduling and delivered reliable, customer-focused service under varying time constraints.
+			This position honed my problem-solving, patient communication and time management skills while allowing me to make a tangible impact on clients' daily lives.
+
 
           </ol>
 
