--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
 
               <h4 class="h4 timeline-item-title">HU University of Applied Sciences Utrecht (Hogeschool Utrecht) - Part-time</h4>
 
-              <span>Dec 2022 — Current</span>
+              <span>Dec 2022 — 2025</span>
 
               <p class="timeline-text">
                 In my part-time position as a student assistant at Hogeschool Utrecht, I supported various academic activities, including assisting in classes, helping organize open days, and coordinating try-out days for prospective students. 
