--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
               <h4 class="h4 timeline-item-title">Hogeschool Utrecht (Bachelor)</h4>
 
-              <span>2021 — Current</span>
+              <span>2021 — 2025</span>
 
               <p class="timeline-text">
                 The Bachelor HBO ICT Cybersecurity and Cloud is a higher professional education
@@ -668,7 +668,7 @@
 
               <h4 class="h4 timeline-item-title">HU University of Applied Sciences Utrecht (Hogeschool Utrecht) - Part-time</h4>
 
-              <span>Dec 2022 — 2025</span>
+              <span>Dec 2022 — Jun 2025</span>
 
               <p class="timeline-text">
                 In my part-time position as a student assistant at Hogeschool Utrecht, I supported various academic activities, including assisting in classes, helping organize open days, and coordinating try-out days for prospective students. 
@@ -683,7 +683,7 @@
 
 		<h4 class="h4 timeline-item-title">Student aan huis - Part-time</h4>
 
-		<span>Feb 2025 - Current</span>
+		<span>Feb 2025 - Aug 2025</span>
 
 		<p class="timeline-text">
 			In my part-time role at Student aan Huis, I provided personalized tech support to clients in their homes, assisting with tasks like troubleshooting software, setting up devices, and resolving connectivity issues.
