--- a/index.html
+++ b/index.html
@@ -691,7 +691,24 @@
 				I also managed appointment scheduling and delivered reliable, customer-focused service under varying time constraints.
 				This position honed my problem-solving, patient communication and time management skills while allowing me to make a tangible impact on clients' daily lives.
 
+			</p>
+				</li>
+					<li class="timeline-item"> 
+				
+			  <h4 class="h4 timeline-item-title">Rewite - Self Employment</h4>
 
+              <span>Aug 2025 - Present</span>
+
+              <p class="timeline-text">
+                I founded Rewite to offer flexible and tailored IT solutions for businesses, combining technical expertise with a focus on reliability and efficiency. 
+				Through my company, I provide a broad range of services including IT support, cloud infrastructure management, cybersecurity consulting, system optimization, and risk assessment.
+				While my work currently involves supporting clients in day-to-day IT operations, I also leverage my knowledge in advanced topics such as secure cloud architecture, incident response planning, and technical consulting to help businesses optimize their systems and protect their digital assets.
+				At Rewite, I aim to deliver high-quality, professional, and client-focused IT services, adapting solutions to the unique needs of each organization. 
+				My approach emphasizes proactive problem-solving, scalability, and long-term reliability, ensuring clients can rely on their technology to support their business goals.
+              </p>
+
+            </li>
+			
           </ol>
 
         </section>
