Toevoegen ICT Concept in Experiences.html

--- a/index.html
+++ b/index.html
@@ -694,6 +694,21 @@
 			</p>
 				</li>
 					<li class="timeline-item"> 
+
+			<h4 class="h4 timeline-item-title">ICT Concept - Fulltime</h4>
+
+			<span>Jun 2025 - Aug 2025</span>
+
+			<p class="timeline-text">
+				I was contracted to ICT Concept through a third-party company to help reduce their backlog of support tickets. 
+				In this role, I worked as a Support Engineer handling second- and third-line tickets. 
+				The position involved extensive customer communication and deeper technical troubleshooting, primarily within the Microsoft ecosystem.
+
+				Our collaboration was very successful, and ICT Concept later continued working with me directly through my own company, Rewite.
+
+			</p>
+				</li>
+					<li class="timeline-item">
 				
 			  <h4 class="h4 timeline-item-title">Rewite - Self Employment</h4>
 
