--- a/index.html
+++ b/index.html
@@ -715,11 +715,11 @@
               <span>Aug 2025 - Present</span>
 
               <p class="timeline-text">
-                I founded Rewite to offer flexible and tailored IT solutions for businesses, combining technical expertise with a focus on reliability and efficiency. 
-				Through my company, I provide a broad range of services including IT support, cloud infrastructure management, cybersecurity consulting, system optimization, and risk assessment.
-				While my work currently involves supporting clients in day-to-day IT operations, I also leverage my knowledge in advanced topics such as secure cloud architecture, incident response planning, and technical consulting to help businesses optimize their systems and protect their digital assets.
-				At Rewite, I aim to deliver high-quality, professional, and client-focused IT services, adapting solutions to the unique needs of each organization. 
-				My approach emphasizes proactive problem-solving, scalability, and long-term reliability, ensuring clients can rely on their technology to support their business goals.
+                I started Rewite while traveling through Asia, with the goal of creating a flexible way to apply my IT skills remotely. 
+				Although my current work is focused on support engineering, Rewite is built around my background and interest in cloud and security.
+
+				Through the company, I provide IT support and technical troubleshooting, while also offering expertise in Microsoft environments, cloud infrastructure, system optimization, and security best practices. 
+				My approach focuses on clear communication, efficiency, and delivering solutions that support long-term stability.
               </p>
 
             </li>
