Update add website reweite.html

--- a/index.html
+++ b/index.html
@@ -720,6 +720,8 @@
 
 				Through the company, I provide IT support and technical troubleshooting, while also offering expertise in Microsoft environments, cloud infrastructure, system optimization, and security best practices. 
 				My approach focuses on clear communication, efficiency, and delivering solutions that support long-term stability.
+
+				For more information about Rewite, check out the website: https://max-witte.github.io/rewite/
               </p>
 
             </li>
